--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@libsql/client": "^0.14.0",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.41.0",
     "next": "^15.2.3",
     "postgres": "^3.4.7",
