--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "2.15.4",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.24.2"
